fix slider scaling on mobile

--- a/assets/index.css
+++ b/assets/index.css
@@ -35,23 +35,22 @@ nav {
 }
 
 .slider {
-    height: calc(100vh - 50px) !important;
+    height: calc(100vh - 40px);
     background-color: black;
 }
 
-.slides {
-    height: calc(100vh - 50px) !important;
+.slider .slides {
+    height: calc(100vh - 40px);
 }
 
-.slides li {
+.slider .slides li {
     background-color: black;
+    height: 100%;
 }
 
-.slides li img {
+.slider .slides li img {
     opacity: 0.5;
     filter: alpha(opacity=50);
-    height: 100%;
-    width: auto;
 }
 
 .slider-text {
@@ -64,7 +63,7 @@ nav {
 
 .slider .indicators {
     z-index: 10;
-    height: 50px;
+    bottom: 5%;
 }
 
 .slider .indicators .indicator-item {
@@ -243,7 +242,7 @@ main {
 
 @media only screen and (max-width: 600px) {
     .slider-text {
-        bottom: 45%;
+        bottom: 40%;
     }
     #hero-intro-text {
         font-size: 3rem;
